# School-Resources

Computer Science 2208/Assignmets/: ~$signment 2.docx
Computer Science 2208/Final Revew/: Final.build_log.htm  Final.htm  Final.lnp  Final.map  prog1.lst  prog1.s  prog2.lst  prog2.s  prog3.d  prog3.lst  prog3.s  prog4.d  prog4.lst  prog4.s
Computer Science 2212/: Exam Review.docx
Computer Science 3307/Assignment 1/: User.h  (+5 more)
Computer Science 3333/: opencvCommand.txt
Computer Science 3388/: 3388 Cheatsheet.docx
Computer Science 4442/Assignments/Assignment 2/src/: CMakeLists.txt
Computer Science 4442/Assignments/Assignment 2/src/Ngrams/: fileRead.cpp  fileRead.h  utilsToStudents.h
Computer Science 4442/Assignments/Assignment 2/src/P1/: P1.cpp
Computer Science 4442/Assignments/Assignment 2/src/P2/: P2.cpp
Computer Science 4442/Assignments/Assignment 2/src/P3/: P3.cpp
Computer Science 4442/Assignments/Assignment 2/src/P4/: P4.cpp
Computer Science 4442/Assignments/Assignment 2/src/P5/: P5.cpp
Computer Science 4442/Assignments/Assignment 2/src/P6/: P6.cpp
Computer Science 4442/Assignments/Assignment 2/src/P7/: P7.cpp
Computer Science 4463/: 4463.pptx
History 1810/: review.docx
Software Engineering 4455/: Midterm Notes.docx  server.ssh.sh
Stats 2141/: Set20-24.docx  Set25-29.docx  ~$set32.docx
TA - Computer Science 2208/: Keil uVision4.LNK
TA - Computer Science 3305/: Project_Plan.txt
Writing 2101/: Critical Thinking.docx  Kennedy’s Dirty Dozen.docx  Opening and Closing Essays.docx  Paragraph.docx  Rhetoric.docx  When to Use Quotations.docx
(+1320 files in other folders)
